--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="nav_and_logo_container">
 			<div class="hidden_logo_container"><img class="hidden_logo" src="https://i.imgur.com/3MTQzk0.png"></div>
 			<ul class="nav_container" id="buttons_container">
-				<li class="nav_items nav_buttons"><a class="button_link active" href="#">ACCUEIL</a></li>
+				<li class="nav_items nav_buttons"><a class="button_link active" href="#">ACUEIL</a></li>
 				<li class="nav_items nav_buttons"><a class="button_link" href="#">GAMME</a></li>
 				<li class="nav_items nav_logo"><img class="logo" src="https://i.imgur.com/3MTQzk0.png"></li>
 				<li class="nav_items nav_buttons"><a class="button_link" href="#">DEVIS</a></li>
